src/objects/ProcedureTracker__c.object
<CustomObject>
    <description>Follow Up your Sales Lifecycle with step-by-step guided instructions. 
#1 Procedure Type: Clear Aligners - suresmile</description>
    <fields>
        <fullName>ActivationNeededby__c</fullName>
        <defaultValue>Today() + 90</defaultValue>
        <label>Activation Needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barrier__c</fullName>
        <label>Barrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>My patients can&apos;t afford it</fullName>
                </value>
                <value>
                    <fullName>I need marketing support to build awareness with patients</fullName>
                </value>
                <value>
                    <fullName>My practice is already busy</fullName>
                </value>
                <value>
                    <fullName>My practice is too busy</fullName>
                </value>
                <value>
                    <fullName>I don’t want to feel like a sales person (clear aligner)</fullName>
                </value>
                <value>
                    <fullName>I need more training/support on Treatment Planning</fullName>
                </value>
                <value>
                    <fullName>Not that many patients are ASKING for it</fullName>
                </value>
                <value>
                    <fullName>What cases are best for me and my practice?  &quot;Tell me what is right for me</fullName>
                </value>
                <value>
                    <fullName>I don’t want to learn another treatment planning software</fullName>
                </value>
                <value>
                    <fullName>How do I bring in more patients?&quot; (New patients to the practice)</fullName>
                </value>
                <value>
                    <fullName>I need more opportunities to bring up the clear aligners conversation</fullName>
                </value>
                <value>
                    <fullName>Patients already know about clear aligners and will ask if interested</fullName>
                </value>
                <value>
                    <fullName>1/3 GP&apos;s, currently not offering (or low volume) clear aligners don’t think they will make a profit</fullName>
                </value>
                <value>
                    <fullName>Need support for more complex cases (past Class I, relapse, and minor tooth movement cases)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessAssessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Assessment/SureSmile Specialty Coordinator</inlineHelpText>
        <label>Business Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Clinical Implementation Specialist</inlineHelpText>
        <label>CIS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procedures_CIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSelectionStaffRoles__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>Case Selection &amp; Staff Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChairsidePatientEducation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chairside Patient Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicalDevelopment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicalEducation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clinical Education Development/Retention Education</inlineHelpText>
        <label>Clinical Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected account must be a dealer (Account Type = &apos;Distributor&apos;)</errorMessage>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor, DNA Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Procedure Trackers (Dealer)</relationshipLabel>
        <relationshipName>Procedure_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscoveryGoalAssessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>Discovery, Goal Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowUpComments__c</fullName>
        <label>Follow-Up Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntraoralScanner__c</fullName>
        <label>Intraoral Scanner in Use ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS - Omnican</fullName>
                </value>
                <value>
                    <fullName>DS - Primescan</fullName>
                </value>
                <value>
                    <fullName>DS - Primescan Conect</fullName>
                </value>
                <value>
                    <fullName>Align – Itero Element 5 D</fullName>
                </value>
                <value>
                    <fullName>Medit – i700</fullName>
                </value>
                <value>
                    <fullName>Planmeca – Emerald S</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastActivityNotes__c</fullName>
        <formula>IF(QBRHighL1toHighL2__c, NOTESQBRHighL1toHighL2__c ,
IF(Peer2Peer__c, NOTESPeer2Peer__c ,
IF(MarketingM2H__c, NOTESMarketingM2H__c ,
IF(TeamCalibration__c, NOTESTeamCalibration__c ,
IF(ClinicalDevelopment__c, NOTESClinicalDevelopment__c ,
IF(PatientAcceptance__c, NOTESPatientAcceptance__c ,
IF(QBRMediumtoHighL1__c, NOTESQBRMediumtoHighL1__c ,
IF(Economics__c,  NOTESEconomics__c ,
IF(PatientEducation__c, NOTESPatientEducation__c ,
IF(ProcessAssessment__c, NOTESProcessAssessment__c,
IF(BusinessAssessment__c, NOTESBusinessAssessment__c,
IF(QBRLowtoMedium__c, NOTESQBRLowtoMedium__c ,
IF(MarketingCampaign__c,  NOTESMarketingCampaign__c ,
IF(ChairsidePatientEducation__c, NOTESChairsidePatientEducation__c ,
IF(ProceduralEconomics__c, NOTESProceduralEconomics__c  ,
IF(ClinicalEducation__c, NOTESClinicalEducation__c ,
IF(Whoisyouridealalignerpatient__c,  NOTESWhoisyouridealalignerpatient__c ,
IF(ResetTraining__c, NOTESResetTraining__c ,
IF(ProceduralAssessment__c, NOTESProceduralAssessment__c ,
IF(X3rdCaseReviewApproval__c, NOTES_3rdCaseReviewApproval__c ,
IF(TeamMeetingReviewProcesses__c,NOTES_TeamMeetingReviewProcesses__c ,
IF(X3rdcasesubmission__c, NOTES_3rdCaseSubmission__c ,
IF(X2ndCaseReviewApproval__c, NOTES_2ndCaseReviewApproval__c ,
IF(X2ndCaseSubmissionExternal__c, NOTES_2ndCaseSubmissionExternal__c  ,
IF(TeamTrainingOrthodonticBenefitsRDH__c,  NOTES_TeamTrainingOrthodonticBenefit__c ,
IF(X1stcasereviewapproval__c, NOTES_1stCaseReviewApproval__c ,
IF(X1stCaseSubmissionWorkflowMarketing__c,  NOTES_1stCaseSubmissionWorkflowMkt__c ,
IF(RecordsTrainingFinance__c,  NOTES_RecordsTrainingFinance__c ,
IF(CaseSelectionStaffRoles__c,   NOTES_CaseSelectionStaffRoles__c ,
IF(DiscoveryGoalAssessment__c,   NOTES_DiscoveryGoalAssessment__c ,
IF(ObtainCreditCardInformation__c,  NOTESObtainCreditCardInformation__c ,
&quot;&quot;)))))))))))))))))))))))))))))))</formula>
        <label>Last Activity Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivity__c</fullName>
        <formula>IF(QBRHighL1toHighL2__c,&quot;QBR (High L1 to High L2)&quot;  ,
IF(Peer2Peer__c,&quot;Peer 2 Peer&quot; ,
IF(MarketingM2H__c,&quot;Marketing (M 2 H)&quot; ,
IF(TeamCalibration__c,&quot;Team Calibration&quot;   ,
IF(ClinicalDevelopment__c,&quot;Clinical Development&quot;  ,
IF(PatientAcceptance__c,&quot;Patient Acceptance&quot;   ,
IF(QBRMediumtoHighL1__c,&quot;QBR (Medium to High L1)&quot;  ,
IF(Economics__c,&quot;Economics&quot;   ,
IF(PatientEducation__c,&quot;Patient Education&quot;  ,
IF(ProcessAssessment__c,&quot;Process Assessment&quot;  ,
IF(BusinessAssessment__c,&quot;Business Assessment&quot; ,
IF(QBRLowtoMedium__c,&quot;QBR (Low to Medium)&quot;  ,
IF(MarketingCampaign__c,&quot;Marketing Campaign&quot;  ,
IF(ChairsidePatientEducation__c,&quot;Chairside Patient Education&quot;  ,
IF(ProceduralEconomics__c,&quot;Procedural Economics&quot;  ,
IF(ClinicalEducation__c,&quot;Clinical Education&quot;  ,
IF(Whoisyouridealalignerpatient__c,&quot;Who is your ideal aligner patient?&quot;  ,
IF(ResetTraining__c,&quot;Reset Training&quot;  ,
IF(ProceduralAssessment__c,&quot;Procedural Assessment&quot;  ,
IF(X3rdCaseReviewApproval__c,&quot;3rd Case Review/Approval&quot;  ,
IF(TeamMeetingReviewProcesses__c,&quot;Team Meeting - Review Processes&quot;  ,
IF(X3rdcasesubmission__c, &quot;3rd Case Submission&quot; ,
IF(X2ndCaseReviewApproval__c, &quot;2nd Case Review/Approval&quot;  ,
IF(X2ndCaseSubmissionExternal__c, &quot;2nd Case Submission - External&quot; ,
IF(TeamTrainingOrthodonticBenefitsRDH__c, &quot;Team Training Ortho Benefits RDH&quot;  ,
IF(X1stcasereviewapproval__c,&quot;1st Case Review/Approval&quot;  ,
IF(X1stCaseSubmissionWorkflowMarketing__c, &quot;1st Case Submission,Workflow &amp; Mkt&quot; ,
IF(RecordsTrainingFinance__c, &quot;Records Training &amp; Finance&quot;  ,
IF(CaseSelectionStaffRoles__c, &quot;Case Selection &amp; Staff Roles&quot;  ,
IF(DiscoveryGoalAssessment__c, &quot;Discovery, Goal Assessment&quot;  ,
IF(ObtainCreditCardInformation__c, &quot;Obtain Credit Card Information&quot;  ,
&quot;&quot;)))))))))))))))))))))))))))))))</formula>
        <label>Last Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketingM2H__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing (M 2 H)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOTESBusinessAssessment__c</fullName>
        <inlineHelpText>Business Assessment/SureSmile Specialty Coordinator</inlineHelpText>
        <label>NOTES: Business Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESChairsidePatientEducation__c</fullName>
        <label>NOTES: Chairside Patient Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESClinicalDevelopment__c</fullName>
        <label>NOTES: Clinical Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESClinicalEducation__c</fullName>
        <inlineHelpText>Clinical Education Development/Retention Education</inlineHelpText>
        <label>NOTES: Clinical Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESEconomics__c</fullName>
        <label>NOTES: Economics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESMarketingCampaign__c</fullName>
        <label>NOTES: Marketing Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESMarketingM2H__c</fullName>
        <label>NOTES: Marketing (M 2 H)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESObtainCreditCardInformation__c</fullName>
        <label>NOTES: Obtain Credit Card Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESPatientAcceptance__c</fullName>
        <label>NOTES: Patient Acceptance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESPatientEducation__c</fullName>
        <label>NOTES: Patient Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESPeer2Peer__c</fullName>
        <label>NOTES: Peer 2 Peer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESProceduralAssessment__c</fullName>
        <label>NOTES: Procedural Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESProceduralEconomics__c</fullName>
        <label>NOTES: Procedural Economics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESProcessAssessment__c</fullName>
        <label>NOTES: Process Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESQBRHighL1toHighL2__c</fullName>
        <label>NOTES: QBR (High L1 to High L2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESQBRLowtoMedium__c</fullName>
        <label>NOTES: QBR (Low to Medium)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESQBRMediumtoHighL1__c</fullName>
        <label>NOTES: QBR (Medium to High L1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESResetTraining__c</fullName>
        <label>NOTES: Reset Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESTeamCalibration__c</fullName>
        <label>NOTES: Team Calibration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTESWhoisyouridealalignerpatient__c</fullName>
        <label>NOTES: Who is your ideal aligner patient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_1stCaseReviewApproval__c</fullName>
        <label>NOTES: 1st Case Review/Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_1stCaseSubmissionWorkflowMkt__c</fullName>
        <label>NOTES: 1st Case Submission,Workflow &amp;Mkt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_2ndCaseReviewApproval__c</fullName>
        <label>NOTES: 2nd Case Review/Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_2ndCaseSubmissionExternal__c</fullName>
        <label>NOTES: 2nd Case Submission - External</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_3rdCaseReviewApproval__c</fullName>
        <label>NOTES: 3rd Case Review/Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_3rdCaseSubmission__c</fullName>
        <label>NOTES: 3rd Case Submission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_CaseSelectionStaffRoles__c</fullName>
        <label>NOTES: Case Selection &amp; Staff Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_DiscoveryGoalAssessment__c</fullName>
        <label>NOTES: Discovery, Goal Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_RecordsTrainingFinance__c</fullName>
        <label>NOTES: Records Training &amp; Finance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_TeamMeetingReviewProcesses__c</fullName>
        <label>NOTES: Team Meeting - Review Processes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOTES_TeamTrainingOrthodonticBenefit__c</fullName>
        <label>NOTES: Team Training Ortho Benefits RDH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextActivity__c</fullName>
        <formula>IF(NOT(ObtainCreditCardInformation__c), &quot;Obtain Credit Card Information&quot;, 
IF(NOT(DiscoveryGoalAssessment__c), &quot;Discovery, Goal Assessment&quot;, 
IF(NOT(CaseSelectionStaffRoles__c), &quot;Case Selection &amp; Staff Roles&quot;,
IF(NOT(RecordsTrainingFinance__c), &quot;Records Training &amp; Finance&quot;,
IF(NOT(X1stCaseSubmissionWorkflowMarketing__c), &quot;1st Case Submission,Workflow &amp; Mkt&quot;,
IF(NOT(X1stcasereviewapproval__c),&quot;1st Case Review/Approval&quot;,
IF(NOT(TeamTrainingOrthodonticBenefitsRDH__c), &quot;Team Training Ortho Benefits RDH&quot;,
IF(NOT(X2ndCaseSubmissionExternal__c), &quot;2nd Case Submission - External&quot;,
IF(NOT(X2ndCaseReviewApproval__c), &quot;2nd Case Review/Approval&quot;,
IF(NOT(X3rdcasesubmission__c), &quot;3rd Case Submission&quot;,
IF(NOT(TeamMeetingReviewProcesses__c),&quot;Team Meeting - Review Processes&quot;,
IF(NOT(X3rdCaseReviewApproval__c),&quot;3rd Case Review/Approval&quot;,
IF(NOT(ProceduralAssessment__c),&quot;Procedural Assessment&quot;,
IF(NOT(ResetTraining__c),&quot;Reset Training&quot;,
IF(NOT(Whoisyouridealalignerpatient__c),&quot;Who is your ideal aligner patient?&quot;,
IF(NOT(ClinicalEducation__c),&quot;Clinical Education&quot;,
IF(NOT(ProceduralEconomics__c),&quot;Procedural Economics&quot;,
IF(NOT(ChairsidePatientEducation__c),&quot;Chairside Patient Education&quot;,
IF(NOT(MarketingCampaign__c),&quot;Marketing Campaign&quot;,
IF(NOT(QBRLowtoMedium__c),&quot;QBR (Low to Medium)&quot;,
IF(NOT(BusinessAssessment__c),&quot;Business Assessment&quot;,
IF(NOT(ProcessAssessment__c),&quot;Process Assessment&quot;,
IF(NOT(PatientEducation__c),&quot;Patient Education&quot;,
IF(NOT(Economics__c),&quot;Economics&quot;,
IF(NOT(QBRMediumtoHighL1__c),&quot;QBR (Medium to High L1)&quot;,
IF(NOT(PatientAcceptance__c),&quot;Patient Acceptance&quot;,
IF(NOT(ClinicalDevelopment__c),&quot;Clinical Development&quot;,
IF(NOT(TeamCalibration__c),&quot;Team Calibration&quot;,
IF(NOT(MarketingM2H__c),&quot;Marketing (M 2 H)&quot;,
IF(NOT(Peer2Peer__c),&quot;Peer 2 Peer&quot;,
IF(NOT(QBRHighL1toHighL2__c),&quot;QBR (High L1 to High L2)&quot;,
&quot;&quot;)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObtainCreditCardInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtain Credit Card Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherIntraoralScannerinUse__c</fullName>
        <label>Other - Intraoral Scanner in Use ?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherimagingDeviceBrand__c</fullName>
        <label>Other - Imaging Device Brand in Use ?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccountInformation__c</fullName>
        <formula>PracticeAccount__r.ParentAccountInformation__c</formula>
        <label>Parent Account Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientAcceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PatientEducation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peer2Peer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer 2 Peer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PracticeAccount__c</fullName>
        <label>Practice Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Procedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProceduralAssessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procedural Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProceduralEconomics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procedural Economics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcedureType__c</fullName>
        <label>Procedure Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear Aligners</fullName>
                    <default>true</default>
                    <label>Clear Aligners</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessAssessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBRHighL1toHighL2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QBR (High L1 to High L2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBRLowtoMedium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QBR (Low to Medium)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBRMediumtoHighL1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QBR (Medium to High L1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordsTrainingFinance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>Records Training &amp; Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResetTraining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scanner_X_Ray_Technologies_in_use__c</fullName>
        <label>Scanner / X-Ray Technologies in use ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentClearAligner__c</fullName>
        <formula>TEXT(PracticeAccount__r.Segment_Ortho_Clear_Aligners__c)</formula>
        <label>Segment - Ortho Clear Aligners</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                    <default>true</default>
                    <label>30 days</label>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High L1</fullName>
                </value>
                <value>
                    <fullName>High L2</fullName>
                </value>
                <value>
                    <fullName>Low: 30 days</fullName>
                    <isActive>false</isActive>
                    <label>Low: 30 days</label>
                </value>
                <value>
                    <fullName>Low: 60 days</fullName>
                    <isActive>false</isActive>
                    <label>Low: 60 days</label>
                </value>
                <value>
                    <fullName>Low: 90 days</fullName>
                    <isActive>false</isActive>
                    <label>Low: 90 days</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Customer Registered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Successfully Onboarded</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Customer Not Interested</fullName>
                </value>
                <value>
                    <fullName>Parked/On-Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCalibration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Calibration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamMeetingReviewProcesses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 60 minutes.</inlineHelpText>
        <label>Team Meeting - Review Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamTrainingOrthodonticBenefitsRDH__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 45 minutes.</inlineHelpText>
        <label>Team Training Ortho Benefits RDH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whoisyouridealalignerpatient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Who is your ideal aligner patient?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1stCaseSubmissionWorkflowMarketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>1st Case Submission,Workflow &amp; Mkt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1stcasereviewapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>1st Case Review/Approval (CIS &amp; Rep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ndCaseReviewApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>2nd  Case Review/Approval (CIS &amp; Rep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ndCaseSubmissionExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 15 minutes.</inlineHelpText>
        <label>2nd Case Submission - External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rdCaseReviewApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>3rd Case Review/Approval (CIS &amp; Rep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rdcasesubmission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment Time: 30 minutes.</inlineHelpText>
        <label>3rd Case Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>imagingDeviceBrandin_Use__c</fullName>
        <label>imaging Device Brand in Use ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>Planmeca</fullName>
                </value>
                <value>
                    <fullName>Carestream</fullName>
                </value>
                <value>
                    <fullName>KaVo Kerr</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Cases_Submitted_the_first_6_months__c</fullName>
        <label># of Cases Submitted the first 6 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Procedure Tracker</label>
    <nameField>
        <displayFormat>Track#{000}</displayFormat>
        <label>Record Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Trackers</pluralLabel>
    <recordTypes>
        <fullName>Clear_Aligners</fullName>
        <active>true</active>
        <label>Clear Aligners</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>